Criando método de criar usuários
